--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         
         $(function() {
           var myMap = new MapsLib({
-            fusionTableId:      "1m4Ez9xyTGfY2CU6O-UgEcPzlS0rnzLU93e4Faa0",
-            googleApiKey:       "AIzaSyA3FQFrNr5W2OEVmuENqhb2MBB2JabdaOY",
-            locationColumn:     "geometry",
+            fusionTableId:      "1EyjVZqUPpoXGQDa_cry9DqFaBVMOgEyq-3qo85bx",
+            googleApiKey:       "AIzaSyDYompTzql9Yn_BSayhRRHRP6AELz4YiqU",
+            locationColumn:     "Where is The Hum location you are reporting?DON'T GIVE YOUR HOME ADDRESS. Please give a nearby intersection",
             map_center:         [41.8781136, -87.66677856445312],
             locationScope:      "chicago"
           });
