--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             googleApiKey:       "AIzaSyDYompTzql9Yn_BSayhRRHRP6AELz4YiqU",
             locationColumn:     "Where is The Hum location you are reporting?DON'T GIVE YOUR HOME ADDRESS. Please give a nearby intersection",
             map_center:         [41.8781136, -87.66677856445312],
-            locationScope:      "chicago"
+            locationScope:      "canada"
           });
 
           var autocomplete = new google.maps.places.Autocomplete(document.getElementById('search_address'));
