--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             fusionTableId:      "1EyjVZqUPpoXGQDa_cry9DqFaBVMOgEyq-3qo85bx",
             googleApiKey:       "AIzaSyCKQlI16JlAtQ5a6t9463VU6DQUB7rdppg",
             locationColumn:     "Where is The Hum location you are reporting?DON'T GIVE YOUR HOME ADDRESS. Please give a nearby intersection",
-            map_center:         [41.8781136, -87.66677856445312],
+            map_center:         [49.899754, -97.137494],
             locationScope:      "canada"
           });
 
