--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                   <option value='805'>1/2 mile</option>
                   <option value='1610'>1 mile</option>
                   <option value='3220'>2 miles</option>
+                  <option value='6440'>4 miles</option>
                 </select>
               </label>
             </p>
