--- a/index_iframe.html
+++ b/index_iframe.html
@@ -79,9 +79,9 @@
           var myMap = new MapsLib({
             fusionTableId:      "AIzaSyDYompTzql9Yn_BSayhRRHRP6AELz4YiqU",
             googleApiKey:       "AIzaSyDYompTzql9Yn_BSayhRRHRP6AELz4YiqU",
-            locationColumn:     "geometry",
-            map_center:         [41.8781136, -87.66677856445312],
-            locationScope:      "chicago"
+            locationColumn:     "Where is The Hum location you are reporting?DON'T GIVE YOUR HOME ADDRESS. Please give a nearby intersection",
+            map_center:         [49.899754, -97.137494],
+            locationScope:      "canada"
           });
 
           
